--- a/commands.ini
+++ b/commands.ini
@@ -9,3 +9,5 @@ news:news
 morning|good morning$:morning
 camera:take_photo
 video:take_video
+monitor$:start_monitoring
+stop monitoring$:stop_monitoring
