--- a/commands.ini
+++ b/commands.ini
@@ -9,3 +9,6 @@ news:news
 morning|good morning$:morning
 camera:take_photo
 video:take_video
+^[-1234567890.]* [a-zA-Z\s]*:expenses_add
+budget:expenses_remaining
+
