Approved user list

--- a/config.ini.example
+++ b/config.ini.example
@@ -1,6 +1,8 @@
 [Config]
 Name=Mojo
 Admin= 1111111
+AdminName=Someone
+Users=[1234,1235]
 FibreTel= 0800111111
 Telbot= 123456
 OpenWeatherMapKey= abcdefg
