Expenses allows USD and converts to GBP

--- a/commands.ini
+++ b/commands.ini
@@ -9,7 +9,7 @@ news:news
 morning|good morning$:morning
 camera:take_photo
 video:take_video
-^[-1234567890.]* [a-zA-Z\s]*:expenses_add
+^[$-1234567890.]* [a-zA-Z\s]*:expenses_add
 budget:expenses_remaining
 broadcast:broadcast
-
+convert [-1234567890.]*:currency_convert
