--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,9 @@
 config.ini
 *.pyc
 *.db
-<<<<<<< Updated upstream
 expenses.csv
 log.txt
 .DS_Store
 .idea
-=======
-.DS_Store
-.idea/
-expenses.csv
 mojo_home_bot.iml
->>>>>>> Stashed changes
+mojo_debug.log
