First attempt at adding riddles, need to refactor

--- a/commands.ini
+++ b/commands.ini
@@ -13,3 +13,5 @@ video:take_video
 budget:expenses_remaining
 broadcast:broadcast
 convert [-1234567890.]*:currency_convert
+riddle answer:riddle_answer
+riddle:riddle
