--- a/commands.ini
+++ b/commands.ini
@@ -1,17 +1,18 @@
 [Commands]
-(what time is it|what is the time|time)\??$:time
-list commands|help|command list:command_list
-weather:weather
-word of the day:word_of_the_day
+(what time is it|what is the time|time)\??$:general.time
+list commands|help|command list:general.command_list
+weather:get_weather
+word of the day:word_of_the_day.get
 check fibre:check_fibre_status
 update:update_self
 news:news
-morning|good morning$:morning
+morning others$:general.morning_others
+morning|good morning$:general.morning
 camera:take_photo
 video:take_video
-^[$-1234567890.]* [a-zA-Z\s]*:expenses_add
-budget:expenses_remaining
-broadcast:broadcast
+^[$-1234567890.]* [a-zA-Z\s]*:expenses.expenses_add
+budget:expenses.expenses_remaining
+broadcast:general.broadcast
 convert [-1234567890.]*:currency_convert
 riddle answer:riddle_answer
 riddle:riddle
