Improved logging. Export expenses csv.

--- a/commands.ini
+++ b/commands.ini
@@ -10,8 +10,10 @@ morning others$:general.morning_others
 morning|good morning$:general.morning
 camera:take_photo
 video:take_video
+get log:get_log
 ^[$-1234567890.]* [a-zA-Z\s]*:expenses.expenses_add
 budget:expenses.expenses_remaining
+get expenses:expenses.expenses_get
 broadcast:general.broadcast
 convert [-1234567890.]*:currency_convert
 riddle answer:riddle_answer
