PIR security sensor with manual activation

--- a/commands.ini
+++ b/commands.ini
@@ -18,3 +18,6 @@ broadcast:general.broadcast
 convert [-1234567890.]*:currency_convert
 riddle answer:riddle_answer
 riddle:riddle
+(?:goodbye)|(?:bye)|(?:we're (?:going out))|(?:security on): security.on
+(?:hello)|(?:we're (?:back|home|here))|(?:security off): security.off
+is house empty: security.house_empty
