Allow automatic security, including manual overrideg

--- a/commands.ini
+++ b/commands.ini
@@ -22,3 +22,4 @@ goodbye|bye|we're going out|security on:security.on
 hello|we're (back|home|here)|security off:security.off
 is house empty:security.house_empty
 sweep:security.sweep
+override security:security.override
