AIML, Security init, Random riddle, Reddit parser

--- a/commands.ini
+++ b/commands.ini
@@ -16,10 +16,11 @@ budget:expenses.expenses_remaining
 get expenses:expenses.expenses_get
 broadcast:general.broadcast
 convert [-1234567890.]*:currency_convert
-riddle answer:riddle_answer
-riddle:riddle
+riddle answer:riddle.answer
+riddle:riddle.next
 goodbye|bye|we're going out|security on:security.on
 hello|we're (back|home|here)|security off:security.off
 is house empty:security.house_empty
 sweep:security.sweep
 override security:security.override
+shower thought:reddit.showerthought
