--- a/commands.ini
+++ b/commands.ini
@@ -1,21 +1,20 @@
 [Commands]
 (what time is it|what is the time|time)\??$:general.time
 list commands|help|command list:general.command_list
-weather:get_weather
+weather:weather.get
 word of the day:word_of_the_day.get
-check fibre:check_fibre_status
+check fibre:fibre_checker.check
 update:update_self
-news:news
+news:news.top_stories
 morning others$:general.morning_others
 morning|good morning$:general.morning
-camera:take_photo
-video:take_video
-get log:get_log
+camera:camera.take_photo
+video:camera.take_video
+get log:general.get_log
 ^[$-1234567890.]* [a-zA-Z\s]*:expenses.expenses_add
 budget:expenses.expenses_remaining
 get expenses:expenses.expenses_get
 broadcast:general.broadcast
-convert [-1234567890.]*:currency_convert
 riddle answer:riddle.answer
 riddle:riddle.next
 goodbye|bye|we're going out|security on:security.on
