Config refactoring. Countdown added

--- a/commands.ini
+++ b/commands.ini
@@ -23,3 +23,5 @@ is house empty:security.house_empty
 sweep:security.sweep
 override security:security.override
 shower thought:reddit.showerthought
+^countdown [0-9]{2}-[0-9]{2}-[0-9]{4}[ a-zA-Z]+:general.set_countdown
+get countdowns:general.get_countdowns
