Add 'did you know' feed and refactor

--- a/commands.ini
+++ b/commands.ini
@@ -16,12 +16,13 @@ budget:expenses.expenses_remaining
 get expenses:expenses.expenses_get
 broadcast:general.broadcast
 riddle answer:riddle.answer
-riddle:riddle.next
+riddle:riddle.get_next
 goodbye|bye|we're going out|security on:security.on
 hello|we're (back|home|here)|security off:security.off
 is house empty:security.house_empty
 sweep:security.sweep
 override security:security.override
-shower thought:reddit.showerthought
+thought of the day:reddit.shower_thought
+did you know|teach me something:reddit.did_you_know
 ^countdown [0-9]{2}-[0-9]{2}-[0-9]{4}[ a-zA-Z]+:general.set_countdown
 get countdowns:general.get_countdowns
