Add weekly budget report

--- a/commands.ini
+++ b/commands.ini
@@ -12,7 +12,7 @@ camera:camera.take_photo
 video:camera.take_video
 get log:general.get_log
 ^[$-1234567890.]* [a-zA-Z\s]*:expenses.expenses_add
-budget:expenses.expenses_remaining
+budget:expenses.expenses_remaining_weekly
 get expenses:expenses.expenses_get
 broadcast:general.broadcast
 riddle answer:riddle.answer
