Add security test command

--- a/commands.ini
+++ b/commands.ini
@@ -19,6 +19,7 @@ riddle answer:riddle.answer
 riddle:riddle.get_next
 goodbye|bye|we're going out|security on:security.on
 hello|we're (back|home|here)|security off:security.off
+test security:security.test
 is house empty:security.house_empty
 sweep:security.sweep
 override security:security.override
