--- a/commands.ini
+++ b/commands.ini
@@ -11,8 +11,10 @@ morning|good morning$:general.morning
 camera:camera.take_photo
 video:camera.take_video
 get log:general.get_log
-^[$-1234567890.]* [a-zA-Z\s]*:expenses.expenses_add
+^[$-1234567890.]* [a-zA-Z\s]*:expenses.log_expense
 budget:expenses.expenses_remaining_weekly
+get transactions:monzo.get_new_transactions
+add monzo token:monzo.add_token
 get expenses:expenses.expenses_get
 broadcast:general.broadcast
 riddle answer:riddle.answer
