Monzo via auth code. Closest countdowns first

--- a/commands.ini
+++ b/commands.ini
@@ -13,7 +13,8 @@ video:camera.take_video
 get log:general.get_log
 ^[$-1234567890.]* [a-zA-Z\s]*:expenses.log_expense
 budget:expenses.expenses_remaining_weekly
-get transactions:monzo.get_new_transactions
+get transactions:monzo.log_all_transactions
+get recent transactions:monzo.log_recent_transactions
 add monzo token:monzo.add_token
 get expenses:expenses.expenses_get
 broadcast:general.broadcast
@@ -29,3 +30,4 @@ thought of the day:reddit.shower_thought
 did you know|teach me something:reddit.did_you_know
 ^countdown [0-9]{2}-[0-9]{2}-[0-9]{4}[ a-zA-Z]+:general.set_countdown
 get countdowns:general.get_countdowns
+get closest countdowns:general.get_closest_countdowns
