--- a/commands.ini
+++ b/commands.ini
@@ -12,7 +12,7 @@ camera:camera.take_photo
 video:camera.take_video
 get log:general.get_log
 ^[$-1234567890.]* [a-zA-Z\s]*:expenses.log_expense
-budget:expenses.expenses_remaining_weekly
+budget|how much money:expenses.expenses_remaining_weekly
 get transactions:monzo.log_all_transactions
 get recent transactions:monzo.log_recent_transactions
 add monzo token:monzo.add_token
