--- a/commands.ini
+++ b/commands.ini
@@ -4,7 +4,9 @@ list commands|help|command list:general.command_list
 weather:weather.get
 word of the day:word_of_the_day.get
 check fibre:fibre_checker.check
-update:update_self
+update:general.update_self
+shutdown pi:general.shutdown_self
+reboot pi:general.reboot_self
 news:news.top_stories
 morning others$:general.morning_others
 morning|good morning$:general.morning
@@ -28,6 +30,6 @@ sweep:security.sweep
 override security:security.override
 thought of the day:reddit.shower_thought
 did you know|teach me something:reddit.did_you_know
-^countdown [0-9]{2}-[0-9]{2}-[0-9]{4}[ a-zA-Z]+:general.set_countdown
-get countdowns:general.get_countdowns
-get closest countdowns:general.get_closest_countdowns
+^countdown [0-9]{2}-[0-9]{2}-[0-9]{4}[ a-zA-Z]+:countdown.set_countdown
+get countdowns:countdown.get_all
+get closest countdowns:countdown.get_closest
