--- a/commands.ini
+++ b/commands.ini
@@ -13,6 +13,7 @@ morning|good morning$:general.morning
 camera:camera.take_photo
 video:camera.take_video
 get log:general.get_log
+rotate log:general.rotate_log
 ^[$-1234567890.]* [a-zA-Z\s]*:expenses.log_expense
 budget|how much money:expenses.expenses_remaining_weekly
 get transactions:monzo.log_all_transactions
