Multiple news source support

--- a/commands.ini
+++ b/commands.ini
@@ -7,6 +7,7 @@ check fibre:fibre_checker.check
 update:general.update_self
 shutdown pi:general.shutdown_self
 reboot pi:general.reboot_self
+news sources:news.news_api_sources
 news:news.top_stories
 morning others$:general.morning_others
 morning|good morning$:general.morning
