--- a/commands.ini
+++ b/commands.ini
@@ -35,3 +35,4 @@ did you know|teach me something:reddit.did_you_know
 ^countdown [0-9]{2}-[0-9]{2}-[0-9]{4}[ a-zA-Z]+:countdown.set_countdown
 get countdowns:countdown.get_all
 get closest countdowns:countdown.get_closest
+houses:zoopla.get_houses
