--- a/commands.ini
+++ b/commands.ini
@@ -35,4 +35,5 @@ did you know|teach me something:reddit.did_you_know
 ^countdown [0-9]{2}-[0-9]{2}-[0-9]{4}[ a-zA-Z]+:countdown.set_countdown
 get countdowns:countdown.get_all
 get closest countdowns:countdown.get_closest
-houses:zoopla.get_houses
+new houses:zoopla.get_houses
+houses:zoopla.get_all_houses
