Add weather forecast for rain and ice

--- a/commands.ini
+++ b/commands.ini
@@ -1,6 +1,7 @@
 [Commands]
 (what time is it|what is the time|time)\??$:general.time
 list commands|help|command list:general.command_list
+weather forecast:weather.forecast
 weather:weather.get
 word of the day:word_of_the_day.get
 check fibre:fibre_checker.check
