Refactor db wrapper and rename commands

--- a/commands.ini
+++ b/commands.ini
@@ -36,5 +36,5 @@ did you know|teach me something:reddit.did_you_know
 ^countdown [0-9]{2}-[0-9]{2}-[0-9]{4}[ a-zA-Z]+:countdown.set_countdown
 get countdowns:countdown.get_all
 get closest countdowns:countdown.get_closest
-new houses:zoopla.get_houses
-houses:zoopla.get_all_houses
+new houses:zoopla.get_properties
+houses:zoopla.get_all_properties
