--- a/.coveragerc
+++ b/.coveragerc
@@ -1,4 +1,6 @@
-[run]
+[report]
 omit =
     /home/rof/python3_venv/lib/python3.4/site-packages/*
     /home/rof/.virtualenv/lib/python2.7/site-packages/*
+    /home/rof/python3_venv/lib/python3.4/distutils/__init__.py
+    ./*/test_*.py
