--- a/.coveragerc
+++ b/.coveragerc
@@ -4,3 +4,5 @@ omit =
     /home/rof/.virtualenv/lib/python2.7/site-packages/*
     /home/rof/python3_venv/lib/python3.4/distutils/__init__.py
     ./*/test_*.py
+    ./test_*.py
+    ./*__init__.py
