Add excluded lines to coverage

--- a/.coveragerc
+++ b/.coveragerc
@@ -6,3 +6,15 @@ omit =
     ./*/test_*.py
     ./test_*.py
     ./*__init__.py
+
+[report]
+exclude_lines =
+    pragma: no cover
+    def __repr__
+    if self.debug:
+    if settings.DEBUG
+    raise AssertionError
+    raise NotImplementedError
+    if 0:
+    if __name__ == .__main__.:
+    sys.version_info < (3,0):
